--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://server233.hosting.reg.ru:3306/u1224980_demo?serverTimezone=Europe/Moscow&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=u1224980_esairam
 spring.datasource.password=6B5y5Z7v
+spring.jackson.property-naming-strategy=CAMEL_CASE_TO_LOWER_CASE_WITH_UNDERSCORES
