--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=8088
+
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/demo2?serverTimezone=Europe/Moscow&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://server233.hosting.reg.ru:3306/u1224980_demo2?serverTimezone=Europe/Moscow&useSSL=false
+spring.datasource.username=u1224980_esairam
+spring.datasource.password=W5d1B0m0
