--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
+server.port=8089
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://server233.hosting.reg.ru:3306/u1224980_demo2?serverTimezone=Europe/Moscow&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
-spring.datasource.username=u1224980_esairam
-spring.datasource.password=6B5y5Z7v
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/demo3?serverTimezone=Europe/Moscow&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=
